--- a/index.html
+++ b/index.html
@@ -316,7 +316,122 @@
                     </div>
                 </div> -->
 
+                <div class='vspace-top'>
+                    <h1>Working papers</h1>
+                    <!-- (* Corresponding author; &#8224 Equal contribution) -->
+                    <!-- <span style="font-size: 15px; vertical-align: bottom;">(* Corresponding author; &#8224 Equal contribution)</span> -->
+                </div>
+                <div id='header-text-remark'>
+                    ( <sup>*</sup> Corresponding author )
+                </div>
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
 
+                    <div class="col">
+                        <div class='paper-title'>
+                            Mitigating Privacy Risk in Membership Inference by Convex-Concave Loss
+                        </div>
+                        <div class='paper-authors'>
+                            Zhenlong Liu, Lei Feng, Huiping Zhuang, Xiaofeng Cao, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2402.05453" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Exploring Learning Complexity for Downstream Data Pruning
+                        </div>
+                        <div class='paper-authors'>
+                            Wenyu Jiang, Zhenlong Liu, Zejian Xie, Songxin Zhang, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2402.05356" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Does Confidence Calibration Help Conformal Prediction?
+                        </div>
+                        <div class='paper-authors'>
+                            Huajun Xi, Jianguo Huang, Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2402.04344" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Open-Vocabulary Calibration for Vision-Language Models
+                        </div>
+                        <div class='paper-authors'>
+                            Shuoyuan Wang, Jindong Wang, Guoqing Wang, Bob Zhang, Kaiyang Zhou, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2402.04655" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Conformal Prediction for Deep Classifier via Label Ranking
+                        </div>
+                        <div class='paper-authors'>
+                            Jianguo Huang, Huajun Xi, Linjun Zhang, Huaxiu Yao, Yue Qiu, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2310.06430.pdf" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            MetaInfoNet: Learning Task-Guided Information for Sample Reweighting
+                        </div>
+                        <div class='paper-authors'>
+                            <b>Hongxin Wei</b>, Lei Feng, Rundong Wang, Bo An
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2012.05273.pdf" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
 
 
                 <div class='vspace-top'>
@@ -789,119 +904,7 @@
                     </div>
                 </div>
 
-                <div class='vspace-top'>
-                    <h1>Preprints</h1>
-                    <!-- (* Corresponding author; &#8224 Equal contribution) -->
-                    <!-- <span style="font-size: 15px; vertical-align: bottom;">(* Corresponding author; &#8224 Equal contribution)</span> -->
-                </div>
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
 
-                    <div class="col">
-                        <div class='paper-title'>
-                            Mitigating Privacy Risk in Membership Inference by Convex-Concave Loss
-                        </div>
-                        <div class='paper-authors'>
-                            Zhenlong Liu, Lei Feng, Huiping Zhuang, Xiaofeng Cao, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2402.05453" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Exploring Learning Complexity for Downstream Data Pruning
-                        </div>
-                        <div class='paper-authors'>
-                            Wenyu Jiang, Zhenlong Liu, Zejian Xie, Songxin Zhang, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2402.05356" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Does Confidence Calibration Help Conformal Prediction?
-                        </div>
-                        <div class='paper-authors'>
-                            Huajun Xi, Jianguo Huang, Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2402.04344" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Open-Vocabulary Calibration for Vision-Language Models
-                        </div>
-                        <div class='paper-authors'>
-                            Shuoyuan Wang, Jindong Wang, Guoqing Wang, Bob Zhang, Kaiyang Zhou, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2402.04655" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Conformal Prediction for Deep Classifier via Label Ranking
-                        </div>
-                        <div class='paper-authors'>
-                            Jianguo Huang, Huajun Xi, Linjun Zhang, Huaxiu Yao, Yue Qiu, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2310.06430.pdf" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            MetaInfoNet: Learning Task-Guided Information for Sample Reweighting
-                        </div>
-                        <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Lei Feng, Rundong Wang, Bo An
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2012.05273.pdf" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
 
                 <div class='vspace-top'>
                     <h1>Research Group</h1>
