--- a/index.html
+++ b/index.html
@@ -324,6 +324,61 @@
                 <div id='header-text-remark'>
                     ( <sup>*</sup> Corresponding author )
                 </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            TorchCP: A Library for Conformal Prediction based on PyTorch
+                        </div>
+                        <div class='paper-authors'>
+                            <b>Hongxin Wei</b>, Jianguo Huang
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2402.12683" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Does Confidence Calibration Help Conformal Prediction?
+                        </div>
+                        <div class='paper-authors'>
+                            Huajun Xi, Jianguo Huang, Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2402.04344" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Conformal Prediction for Deep Classifier via Label Ranking
+                        </div>
+                        <div class='paper-authors'>
+                            Jianguo Huang, Huajun Xi, Linjun Zhang, Huaxiu Yao, Yue Qiu, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2310.06430.pdf" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
                         <img src='imgs/star_img.png' class='img-fluid'>
@@ -358,23 +413,7 @@
                         </div>
                     </div>
                 </div>
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
 
-                    <div class="col">
-                        <div class='paper-title'>
-                            Does Confidence Calibration Help Conformal Prediction?
-                        </div>
-                        <div class='paper-authors'>
-                            Huajun Xi, Jianguo Huang, Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2402.04344" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
@@ -393,26 +432,6 @@
                         </div>
                     </div>
                 </div>
-
-
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Conformal Prediction for Deep Classifier via Label Ranking
-                        </div>
-                        <div class='paper-authors'>
-                            Jianguo Huang, Huajun Xi, Linjun Zhang, Huaxiu Yao, Yue Qiu, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2310.06430.pdf" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
-
 
 
                 <div class='row vspace-top'>
