--- a/index.html
+++ b/index.html
@@ -940,12 +940,13 @@
                         </div>
                     </div>
 
+
                     <div class="col">
                         <div class='paper-title'>
-                            Shuoyuan Wang
+                             Kangdao Liu
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, Master student at Macau University
+                            Research Intern, Ph.D. student at Macau University
                         </div>
                     </div>
 
@@ -970,6 +971,17 @@
                             Research Intern, Master student at Central South University
                         </div>
                     </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Shuoyuan Wang
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern, Master student at Macau University
+                        </div>
+                    </div>
+
+
                     <div class="col">
                         <div class='paper-title'>
                             Hongfu Gao
@@ -979,6 +991,8 @@
                         </div>
                     </div>
 
+
+
                     <div class="col">
                         <div class='paper-title'>
                             Zhenlong Liu
@@ -987,17 +1001,6 @@
                             Master student (2023 fall) at SUSTech
                         </div>
                     </div>
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Huajun Xi
-                        </div>
-                        <div class='paper-desc'>
-                            Undergraduate student at SUSTech
-                        </div>
-                    </div>
-
-
 
 
                 </div>
@@ -1072,11 +1075,10 @@
                             Undergraduate student at SUSTech (Incoming master student in 2024 fall)
                         </div>
                     </div>
-
-
+                    
                     <div class="col">
                         <div class='paper-title'>
-                             Junjie Qiu
+                            Huajun Xi
                         </div>
                         <div class='paper-desc'>
                             Undergraduate student at SUSTech
