--- a/index.html
+++ b/index.html
@@ -463,6 +463,23 @@
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
                 </div>
 
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            CroSel: Cross Selection of Confident Pseudo Labels for Partial-Label Learning
+                        </div>
+                        <div class='paper-desc'>
+                            CVPR 2024
+                        </div>
+                        <div class='paper-authors'>
+                            Shiyu Tian, <b>Hongxin Wei</b>, Yiqun Wang, Lei Feng
+                        </div>
+                    </div>
+                </div>
                                 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
