--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
                              Kangdao Liu
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, Ph.D. student at Macau University
+                            Research Intern, Ph.D. student at University of Macau
                         </div>
                     </div>
 
@@ -994,7 +994,7 @@
                             Shuoyuan Wang
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, Master student at Macau University
+                            Research Intern, Master student at University of Macau
                         </div>
                     </div>
 
