--- a/index.html
+++ b/index.html
@@ -967,12 +967,55 @@
                         </div>
                     </div>
 
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Hao Zeng
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern, PhD student at Xiamen University
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+                <div class='row vspace-top'>
+
+                    <!-- <div class="col">
+                        <div class='paper-title'>
+                            Huihui Wang
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern, Master student at Central South University
+                        </div>
+                    </div> -->
                     <div class="col">
                         <div class='paper-title'>
                             Jianguo Huang
                         </div>
                         <div class='paper-desc'>
                             Research Intern, Master student at ShanghaiTech University
+                        </div>
+                    </div>
+
+                    
+                    <div class="col">
+                        <div class='paper-title'>
+                            Shuoyuan Wang
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern, Master student at University of Macau
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Hengxiang Zhang
+                        </div>
+                        <div class='paper-desc'>
+                            Research Assistant(Full-time), graduated from UESTC (Master)
                         </div>
                     </div>
 
@@ -989,14 +1032,6 @@
                         </div>
                     </div> -->
 
-                    <div class="col">
-                        <div class='paper-title'>
-                            Shuoyuan Wang
-                        </div>
-                        <div class='paper-desc'>
-                            Research Intern, Master student at University of Macau
-                        </div>
-                    </div>
 
 
                     <div class="col">
@@ -1008,8 +1043,6 @@
                         </div>
                     </div>
 
-
-
                     <div class="col">
                         <div class='paper-title'>
                             Zhenlong Liu
@@ -1019,8 +1052,20 @@
                         </div>
                     </div>
 
+                    <div class="col">
+                        <div class='paper-title'>
+                            Xuanning Zhou
+                        </div>
+                        <div class='paper-desc'>
+                            Undergraduate student at HITSZ
+                        </div>
+                    </div>
+
 
                 </div>
+
+
+
 
                 <!-- <div class='row vspace-top'> -->
                     <!-- <div class="col">
@@ -1044,14 +1089,7 @@
                 <!-- </div> -->
 
                 <div class='row vspace-top'>
-                    <div class="col">
-                        <div class='paper-title'>
-                            Xuanning Zhou
-                        </div>
-                        <div class='paper-desc'>
-                            Undergraduate student at HITSZ
-                        </div>
-                    </div>
+
 
                     <div class="col">
                         <div class='paper-title'>
@@ -1072,9 +1110,6 @@
                         </div>
                     </div>
 
-                </div>
-
-                <div class='row vspace-top'>
                     <div class="col">
                         <div class='paper-title'>
                             Zicheng Xie
@@ -1083,6 +1118,11 @@
                             Undergraduate student at SUSTech
                         </div>
                     </div>
+
+                </div>
+
+                <div class='row vspace-top'>
+
 
                     <div class="col">
                         <div class='paper-title'>
