--- a/index.html
+++ b/index.html
@@ -953,7 +953,8 @@
                             Wenyu Jiang
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, Ph.D. student at Nanjing University.
+                            Research Intern
+                            Ph.D. student at Nanjing University.
                         </div>
                     </div>
 
@@ -963,7 +964,8 @@
                              Kangdao Liu
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, Ph.D. student at University of Macau
+                            Research Intern
+                            Ph.D. student at University of Macau
                         </div>
                     </div>
 
@@ -973,7 +975,8 @@
                             Hao Zeng
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, PhD student at Xiamen University
+                            Research Intern
+                            PhD student at Xiamen University
                         </div>
                     </div>
 
@@ -996,7 +999,8 @@
                             Jianguo Huang
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, Master student at ShanghaiTech University
+                            Research Intern
+                            Master student at ShanghaiTech University
                         </div>
                     </div>
 
@@ -1006,7 +1010,8 @@
                             Shuoyuan Wang
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, Master student at University of Macau
+                            Research Intern
+                            Master student at University of Macau
                         </div>
                     </div>
 
@@ -1015,7 +1020,8 @@
                             Hengxiang Zhang
                         </div>
                         <div class='paper-desc'>
-                            Research Assistant(Full-time), graduated from UESTC (Master)
+                            Research Assistant(Full-time)
+                            Master degree from UESTC
                         </div>
                     </div>
 
@@ -1031,8 +1037,6 @@
                             Research Intern, Master student at Central South University
                         </div>
                     </div> -->
-
-
 
                     <div class="col">
                         <div class='paper-title'>
