--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
                             Wenyu Jiang
                         </div>
                         <div class='paper-desc'>
-                            Research Intern
+                            Research Intern <br>
                             Ph.D. student at Nanjing University.
                         </div>
                     </div>
@@ -964,7 +964,7 @@
                              Kangdao Liu
                         </div>
                         <div class='paper-desc'>
-                            Research Intern
+                            Research Intern <br>
                             Ph.D. student at University of Macau
                         </div>
                     </div>
@@ -975,7 +975,7 @@
                             Hao Zeng
                         </div>
                         <div class='paper-desc'>
-                            Research Intern
+                            Research Intern <br>
                             PhD student at Xiamen University
                         </div>
                     </div>
@@ -999,7 +999,7 @@
                             Jianguo Huang
                         </div>
                         <div class='paper-desc'>
-                            Research Intern
+                            Research Intern <br>
                             Master student at ShanghaiTech University
                         </div>
                     </div>
@@ -1010,7 +1010,7 @@
                             Shuoyuan Wang
                         </div>
                         <div class='paper-desc'>
-                            Research Intern
+                            Research Intern <br>
                             Master student at University of Macau
                         </div>
                     </div>
@@ -1020,7 +1020,7 @@
                             Hengxiang Zhang
                         </div>
                         <div class='paper-desc'>
-                            Research Assistant(Full-time)
+                            Research Assistant (Full-time) <br>
                             Master degree from UESTC
                         </div>
                     </div>
@@ -1133,7 +1133,8 @@
                             Beier Luo
                         </div>
                         <div class='paper-desc'>
-                            Undergraduate student at SUSTech (Incoming master student in 2024 fall)
+                            Undergraduate student at SUSTech <br>
+                            (Incoming master student in 2024 fall)
                         </div>
                     </div>
                     
@@ -1143,6 +1144,14 @@
                         </div>
                         <div class='paper-desc'>
                             Undergraduate student at SUSTech
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            
+                        </div>
+                        <div class='paper-desc'>
                         </div>
                     </div>
 
