--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        March 2024
+                    </div>
+                    <div class="col">
+                        I will be serving as a Area Chair for NeurIPS 2024.
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         January 2024
                     </div>
                     <div class="col">
