--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        May 2024
+                    </div>
+                    <div class="col">
+                        Four papers are accepted by ICML 2024.
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         March 2024
                     </div>
                     <div class="col">
@@ -370,41 +379,7 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
 
-                    <div class="col">
-                        <div class='paper-title'>
-                            Conformal Prediction for Deep Classifier via Label Ranking
-                        </div>
-                        <div class='paper-authors'>
-                            Jianguo Huang, Huajun Xi, Linjun Zhang, Huaxiu Yao, Yue Qiu, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2310.06430.pdf" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Mitigating Privacy Risk in Membership Inference by Convex-Concave Loss
-                        </div>
-                        <div class='paper-authors'>
-                            Zhenlong Liu, Lei Feng, Huiping Zhuang, Xiaofeng Cao, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2402.05453" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
                         <img src='imgs/star_img.png' class='img-fluid'>
@@ -424,23 +399,6 @@
                 </div>
 
 
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Open-Vocabulary Calibration for Vision-Language Models
-                        </div>
-                        <div class='paper-authors'>
-                            Shuoyuan Wang, Jindong Wang, Guoqing Wang, Bob Zhang, Kaiyang Zhou, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2402.04655" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
 
 
                 <div class='row vspace-top'>
@@ -472,6 +430,70 @@
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
                 </div>
 
+                
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Open-Vocabulary Calibration for Vision-Language Models
+                        </div>
+                        <div class='paper-desc'>
+                            ICML 2024
+                        </div>
+                        <div class='paper-authors'>
+                            Shuoyuan Wang, Jindong Wang, Guoqing Wang, Bob Zhang, Kaiyang Zhou, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2402.04655" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Conformal Prediction for Deep Classifier via Label Ranking
+                        </div>
+                        <div class='paper-desc'>
+                            ICML 2024
+                        </div>
+                        <div class='paper-authors'>
+                            Jianguo Huang, Huajun Xi, Linjun Zhang, Huaxiu Yao, Yue Qiu, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2310.06430.pdf" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Mitigating Privacy Risk in Membership Inference by Convex-Concave Loss
+                        </div>
+                        <div class='paper-desc'>
+                            ICML 2024
+                        </div>
+                        <div class='paper-authors'>
+                            Zhenlong Liu, Lei Feng, Huiping Zhuang, Xiaofeng Cao, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2402.05453" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
                         <img src='imgs/star_img.png' class='img-fluid'>
@@ -482,7 +504,7 @@
                             CroSel: Cross Selection of Confident Pseudo Labels for Partial-Label Learning
                         </div>
                         <div class='paper-desc'>
-                            CVPR 2024
+                            CVPR 2024 (Oral)
                         </div>
                         <div class='paper-authors'>
                             Shiyu Tian, <b>Hongxin Wei</b>, Yiqun Wang, Lei Feng
