--- a/index.html
+++ b/index.html
@@ -431,6 +431,10 @@
                 </div>
 
                 
+
+
+
+                
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
                         <img src='imgs/star_img.png' class='img-fluid'>
@@ -490,6 +494,24 @@
                         </div>
                         <div>
                             <a href="https://arxiv.org/pdf/2402.05453" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Towards Minimal Coreset Size under Model Performance Constraints 
+                        </div>
+                        <div class='paper-desc'>
+                            ICML 2024
+                        </div>
+                        <div class='paper-authors'>
+                            Xiaobo Xia, Jiale Liu, Shaokun Zhang, Qingyun Wu, <b>Hongxin Wei</b>, Tongliang Liu
                         </div>
                     </div>
                 </div>
