--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        May 2023
+                    </div>
+                    <div class="col">
+                        I am accepting Mphil and PhD applications (2025 fall). I am always looking for highly-motivated research interns, RAs and PostDocs to join our research (refer to <a href="https://zhuanlan.zhihu.com/p/665497780?" target="_blank">this page</a>). 
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         May 2024
                     </div>
                     <div class="col">
@@ -178,32 +187,7 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top-news'>
-                    <div class="col-sm-2 news-date">
-                        May 2023
-                    </div>
-                    <div class="col">
-                        I am always looking for highly-motivated research interns, RAs and PostDocs to join our research (refer to <a href="https://zhuanlan.zhihu.com/p/665497780?" target="_blank">this page</a>). Mphil or PhD applications (2024 or 2025 fall) are also welcome.
-                    </div>
-                </div>
-                
-                <div class='row vspace-top-news'>
-                    <div class="col-sm-2 news-date">
-                        December 2022
-                    </div>
-                    <div class="col">
-                        I am going to join <a href="https://stat-ds.sustech.edu.cn/" target="_blank">the Department of Statistics and Data Science</a> at <a href="https://www.sustech.edu.cn/en/" target="_blank">SUSTech</a> (China, Shenzhen) as a tenure-track assistant professor in the summer of 2023.
-                    </div>
-                </div>
 
-                <!-- <div class='row vspace-top-news'>
-                    <div class="col-sm-2 news-date">
-                        December 2022
-                    </div>
-                    <div class="col">
-                        I will be serving as a reviewer for CVPR 2023, ICML 2023, NeurIPS 2023, IJCAI 2023, KDD 2023 and ICCV 2023.
-                    </div>
-                </div> -->
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
