--- a/index.html
+++ b/index.html
@@ -326,6 +326,23 @@
                 <div id='header-text-remark'>
                     ( <sup>*</sup> Corresponding author )
                 </div>
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            On the Noise Robustness of In-Context Learning for Text Generation
+                        </div>
+                        <div class='paper-authors'>
+                            Hongfu Gao, Feipeng Zhang, Wenyu Jiang, Jun Shu, Feng Zheng, <b>Hongxin Wei</b><sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2402.12683" target="_blank">[Paper]</a> 
+                        </div>
+                    </div>
+                </div>
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
@@ -340,7 +357,7 @@
                             <b>Hongxin Wei</b>, Jianguo Huang
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2402.12683" target="_blank">[Paper]</a>
+                            <a href="https://arxiv.org/abs/2405.17264" target="_blank">[Paper]</a>
                         </div>
                     </div>
                 </div>
