--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                             <b>Hongxin Wei</b>, Jianguo Huang
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2405.17264" target="_blank">[Paper]</a>
+                            <a href="https://arxiv.org/abs/2402.12683" target="_blank">[Paper]</a>
                         </div>
                     </div>
                 </div>
@@ -509,7 +509,7 @@
                             Towards Minimal Coreset Size under Model Performance Constraints 
                         </div>
                         <div class='paper-desc'>
-                            ICML 2024
+                            ICML 2024 (Spotlight)
                         </div>
                         <div class='paper-authors'>
                             Xiaobo Xia, Jiale Liu, Shaokun Zhang, Qingyun Wu, <b>Hongxin Wei</b>, Tongliang Liu
