--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         July 2024
                     </div>
                     <div class="col">
-                        We release a content moderation benchmark for Chinese (Mandarin) <a href="https://huggingface.co/spaces/SUSTech/ChineseSafe-Benchmark" target="_blank">ChineseSafe-Benchmark</a>.
+                        We release a Chinese Content Moderation Benchmark for LLMs: <a href="https://huggingface.co/spaces/SUSTech/ChineseSafe-Benchmark" target="_blank">ChineseSafe-Benchmark</a>.
                     </div>
                 </div>
 
