--- a/index.html
+++ b/index.html
@@ -1217,6 +1217,13 @@
                         </div>
                     </div>
 
+                    <div class="col">
+                        <div class='paper-title'>
+                        </div>
+                        <div class='paper-desc'>
+                        </div>
+                    </div>
+
                 </div>
                 
 
