--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,8 @@
                             Hongfu Gao
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, Master student at XJTU
+                            Research Intern, <br>
+                            Master student at XJTU
                         </div>
                     </div>
 
