--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
                             Hao Zeng
                         </div>
                         <div class='paper-desc'>
-                            Postdoc (co-supervised with Prof. Bingyi Jing) <br>
+                            Postdoc (co-supervised with Prof. B. Jing) <br>
                             PhD degree from Xiamen University
                         </div>
                     </div>
@@ -1099,15 +1099,7 @@
                         </div>
                     </div> -->
 
-                    <div class="col">
-                        <div class='paper-title'>
-                            Jianguo Huang
-                        </div>
-                        <div class='paper-desc'>
-                            Research Intern <br>
-                            Master student at ShanghaiTech University
-                        </div>
-                    </div>
+
 
                     <div class="col">
                         <div class='paper-title'>
@@ -1130,7 +1122,15 @@
                         </div>
                     </div>
 
-
+                    <div class="col">
+                        <div class='paper-title'>
+                            Hongfu Gao
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern, <br>
+                            Master student at XJTU
+                        </div>
+                    </div>
 
                 </div>
 
@@ -1160,16 +1160,53 @@
 
                 <div class='row vspace-top'>
                     
+
                     <div class="col">
                         <div class='paper-title'>
-                            Hongfu Gao
+                            Jianqing Song
                         </div>
                         <div class='paper-desc'>
                             Research Intern, <br>
-                            Master student at XJTU
+                            PhD student at Nanjing University
                         </div>
                     </div>
 
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Zhile Xu
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern, <br>
+                            Master student at The University of Edinburgh
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Ziyuan Wang
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern (Remote), <br>
+                            Master student at Chalmers University of Technology
+                        </div>
+                    </div>
+
+                </div>
+
+
+
+                <div class='row vspace-top'>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Qiqi Tao
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern, <br>
+                            Master degree from NUS, Singapore
+                        </div>
+                    </div>
 
 
                     <div class="col">
@@ -1190,11 +1227,6 @@
                             Undergraduate student at SUSTech
                         </div>
                     </div>
-
-
-
-
-
 
                 </div>
 
@@ -1220,13 +1252,47 @@
 
                     <div class="col">
                         <div class='paper-title'>
+                            Yunxin Huang
                         </div>
                         <div class='paper-desc'>
+                            Undergraduate student at SUSTech
                         </div>
                     </div>
 
                 </div>
                 
+                <div class='vspace-top'>
+                    <h1>Past Members</h1>
+                </div>
+
+                <div class='row vspace-top'>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Jianguo Huang
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern (2023-2024) <br>
+                            Now PhD student at NTU, Singapore
+                        </div>
+                    </div>
+
+
+                    <div class="col">
+                        <div class='paper-title'>
+                        </div>
+                        <div class='paper-desc'>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                        </div>
+                        <div class='paper-desc'>
+                        </div>
+                    </div>
+                </div>
+
 
 
 
@@ -1313,7 +1379,6 @@
         </div>
     </div>
 
- 
 
 
 
